Bindings/Ogre/cBuild/include/ClassResource.h

// This source file is part of HGamer3D, a project to enable 3D game development 
// in Haskell. For the latest info, see http://www.hgamer3d.org .
// 
// (c) 2011-2014 Peter Althainz
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// 

// ClassResource.h

// 

#include "wchar.h"
#ifndef _DEFINED_HG3D_ClassResource
#define _DEFINED_HG3D_ClassResource

#include "ClassPtr.h"
#include "ClassResourceManager.h"


// 
void ogre_rsrc_destruct(struct hg3dclass_struct * thisclass_c);

// 
void ogre_rsrc_prepare(struct hg3dclass_struct * thisclass_c, int backgroundThread_c);

// 
void ogre_rsrc_load(struct hg3dclass_struct * thisclass_c, int backgroundThread_c);

// 
void ogre_rsrc_reload(struct hg3dclass_struct * thisclass_c);

// 
void ogre_rsrc_isReloadable(struct hg3dclass_struct * thisclass_c, int * result_c);

// 
void ogre_rsrc_isManuallyLoaded(struct hg3dclass_struct * thisclass_c, int * result_c);

// 
void ogre_rsrc_unload(struct hg3dclass_struct * thisclass_c);

// 
void ogre_rsrc_getSize(struct hg3dclass_struct * thisclass_c, int * result_c);

// 
void ogre_rsrc_touch(struct hg3dclass_struct * thisclass_c);

// 
void ogre_rsrc_getName(struct hg3dclass_struct * thisclass_c, char * result_c);

// 
void ogre_rsrc_isPrepared(struct hg3dclass_struct * thisclass_c, int * result_c);

// 
void ogre_rsrc_isLoaded(struct hg3dclass_struct * thisclass_c, int * result_c);

// 
void ogre_rsrc_isLoading(struct hg3dclass_struct * thisclass_c, int * result_c);

// 
void ogre_rsrc_isBackgroundLoaded(struct hg3dclass_struct * thisclass_c, int * result_c);

// 
void ogre_rsrc_setBackgroundLoaded(struct hg3dclass_struct * thisclass_c, int bl_c);

// 
void ogre_rsrc_escalateLoading(struct hg3dclass_struct * thisclass_c);

// Gets the group which this resource is a member of. 
void ogre_rsrc_getGroup(struct hg3dclass_struct * thisclass_c, char * result_c);

// 
void ogre_rsrc_changeGroupOwnership(struct hg3dclass_struct * thisclass_c, char * newGroup_c);

// Gets the manager which created this resource. 
void ogre_rsrc_getCreator(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * result_c);

// 
void ogre_rsrc_getOrigin(struct hg3dclass_struct * thisclass_c, char * result_c);

// 
void ogre_rsrc_getStateCount(struct hg3dclass_struct * thisclass_c, int * result_c);

#endif 